style.css
/* ... */
.nav-invert .navbar .nav {
    float: left;
}

.nav-invert .navbar-header,
.nav-invert .navbar-brand {
    float: right;
    position: relative;
    z-index: 2;
}
footer .col-sm-4{
    width: 100%;
}
footer ul {
    display: flex;
    justify-content: space-between;
}
footer li {
    list-style-type: none;
}


@media (min-width: 768px) {
    .site-navigation {
        position: absolute;
        top: 50%;
        right: 20px;
        transform: translate(0, -50%);
        -webkit-transform: translateY(-50%);
    }
    .nav > li .dropdown-menu a,
    .nav > li .dropdown-menu a:hover {
        color: #484848;
    }
    .nav-invert .site-navigation {
        left: 0;
        right: 0;
    }
    .nav-center {
        text-align: center;
    }
    .nav-center .navbar-header {
        width: 100%;
    }
    .nav-center .navbar-header,
    .nav-center .navbar-brand,
    .nav-center .nav > li {
        float: none;
        display: inline-block;
    }
    .nav-center .site-navigation {
        position: relative;
        width: 100%;
        right: 0;
        margin-right: 0px;
        margin-top: 20px;
    }
    .nav-center.mini-nav .navbar-toggle {
        float: none;
        margin: 10px auto 0;
    }
}

.nav > li > .dropdown a {
    background: none!important;
    display: block;
    padding: 14px 15px;
}

nav .caret {
    margin: 0 5px;
}

.dropdown-menu .dropdown-menu {
    top: -8px;
    left: 100%;
}

.dropdown-menu .dropmenu-flow-right {
    top: 100%;
    left: 0;
    margin-left: -1px;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}

.dropdown-menu .dropdown span {
    border: 4px solid black;
    border-top-color: transparent;
    border-right-color: transparent;
    border-bottom-color: transparent;
    margin: 6px -5px 0 0!important;
    float: right;
}

.mg-md {
    margin-top: 10px;
    margin-bottom: 20px;
}

.mg-lg {
    margin-top: 10px;
    margin-bottom: 40px;
}

.btn {
    margin: 0 5px 5px 0;
}

.btn.pull-right {
    margin: 0 0 5px 5px;
}

.btn-d,
.btn-d:hover,
.btn-d:focus {
    color: #FFF;
    background: rgba(0, 0, 0, .3);
}

button {
    outline: none!important;
}

.btn-rd {
    border-radius: 40px;
}

.btn-clean {
    border: 1px solid rgba(0, 0, 0, .08);
    border-bottom-color: rgba(0, 0, 0, .1);
    text-shadow: 0 1px 0 rgba(0, 0, 1, .1);
    box-shadow: 0 1px 3px rgba(0, 0, 1, .25), inset 0 1px 0 0 rgba(255, 255, 255, .15);
}

.icon-md {
    font-size: 30px!important;
}

.icon-lg {
    font-size: 60px!important;
}

.sm-shadow {
    text-shadow: 0 1px 2px rgba(0, 0, 0, .3);
}

.panel-sq,
.panel-sq .panel-heading,
.panel-sq .panel-footer {
    border-radius: 0;
}

.panel-rd {
    border-radius: 30px;
}

.panel-rd .panel-heading {
    border-radius: 29px 29px 0 0;
}

.panel-rd .panel-footer {
    border-radius: 0 0 29px 29px;
}

.form-control {
    border-color: rgba(0, 0, 0, .1);
    box-shadow: none;
}

.scrollToTop {
    width: 40px;
    height: 40px;
    position: fixed;
    bottom: 20px;
    right: 20px;
    opacity: 0;
    z-index: 500;
    transition: all .3s ease-in-out;
}

.scrollToTop span {
    margin-top: 6px;
}

.showScrollTop {
    font-size: 14px;
    opacity: 1;
}

a[data-lightbox] {
    position: relative;
    display: block;
    text-align: center;
}

a[data-lightbox]:hover::before {
    content: "+";
    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial;
    font-size: 32px;
    width: 50px;
    height: 50px;
    margin-left: -25px;
    border-radius: 50%;
    background: rgba(0, 0, 0, .6);
    color: #FFF;
    font-weight: 100;
    z-index: 1;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    -webkit-transform: translateY(-50%);
}

a[data-lightbox]:hover img {
    opacity: 0.6;
    -webkit-animation-fill-mode: none;
    animation-fill-mode: none;
}

#lightbox-modal {
    display: flex;
    align-items: center;
}

#lightbox-modal .modal-dialog {
    width: 90%;
    max-width: 900px;
    margin: 0 auto 0;
}

#lightbox-modal .modal-dialog img {
    max-height: 90vh;
    margin: 0 auto;
}

.lightbox-caption {
    padding: 20px;
    color: #FFF;
    background: rgba(0, 0, 0, .5);
    position: absolute;
    left: 15px;
    right: 15px;
    bottom: 5px;
}

.close-lightbox {
    color: #FFF;
    font-size: 30px;
    position: absolute;
    top: 20px;
    right: 20px;
    z-index: 20;
    background: rgba(0, 0, 0, .5);
    border: none;
    line-height: 30px;
    padding: 0 9px 5px;
    opacity: 0.3;
}

.close-lightbox:hover,
.next-lightbox:hover,
.prev-lightbox:hover {
    opacity: 1.0;
    color: #FFF;
}

.next-lightbox,
.prev-lightbox {
    font-size: 20px;
    color: rgba(255, 255, 255, .9);
    background: rgba(0, 0, 0, .5);
    transition: all .2s ease-in-out;
    position: absolute;
    top: 45%;
    z-index: 1;
    opacity: 0.4;
}

.next-lightbox {
    padding: 6px 8px 1px 13px;
    right: 25px;
}

.prev-lightbox {
    padding: 6px 13px 1px 10px;
    left: 25px;
}

.snapshot-lb .modal-body {
    padding-bottom: 45px;
}

.snapshot-lb .lightbox-caption {
    padding: 0;
    color: rgba(0, 0, 0, .5);
    background: none;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
label,
.btn,
a {
    font-family: "helvetica";
    font-weight: 400;
    color: #575757!important;
}

.container {
    max-width: 1000px;
}

.hero-bloc-text {
    font-size: 38px;
}

.hero-bloc-text-sub {
    font-size: 36px;
}

.statement-bloc-text {
    line-height: 26px;
    font-style: italic;
    font-size: 20px;
    text-align: center;
    font-weight: lighter;
    max-width: 520px;
    margin: auto auto auto auto;
}

p {
    font-size: 14px;
}
blockquote {
    margin: 0;
   
}
.text-citation {
    font-size: 20px;
}
.author-citation {
    font-size: 20px;
}

.tight-width-whitespace {
    max-width: 600px;
    margin: auto auto auto auto;
}

.h1 {
    font-size: 20px;
    font-family: "Open Sans";
}
/* ... */

